--- a/Frontend/src/restListing/listing.css
+++ b/Frontend/src/restListing/listing.css
@@ -269,3 +269,21 @@
 .textofcost{
     color: rgb(43, 156, 137);
 }
+.item_namestyle{
+    font-size: 3em;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    
+ 
+}
+.item_namestyle link:hover {
+    text-decoration: none;
+    
+}
+Link.item_namestyle to:hover{
+    text-decoration: none;
+}
+Link:hover{
+    text-decoration: none;
+}
